--- a/Foods/public/index.html
+++ b/Foods/public/index.html
@@ -6,10 +6,39 @@
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Foods</title>
-	<link rel="stylesheet" href="css/font-awesome-5.15.1.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+	      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+	      crossorigin="anonymous"
+	      referrerpolicy="no-referrer"
+	/>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+			href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Nunito:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,600&display=swap"
+			rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+	<div class="container">
+		<!--SECTION 1-->
+		<section class="section section-variety-of-foods" id="section-variety-of-foods">
+			<h1 class="section__heading">Variety of Foods</h1>
+			<div class="section__icons">
+				<i class="fas fa-egg"></i>
+				<i class="fas fa-stroopwafel"></i>
+				<i class="fas fa-cheese"></i>
+				<i class="fas fa-hotdog"></i>
+				<i class="fas fa-drumstick-bite"></i>
+				<i class="fas fa-apple-alt"></i>
+				<i class="fas fa-ice-cream"></i>
+				<i class="fas fa-fish"></i>
+				<i class="fas fa-cookie"></i>
+				<i class="fas fa-seedling"></i>
+			</div>
+		</section>
+		<!--./SECTION 1-->
+	</div>
 	<script src="js/main.js"></script>
 </body>
 </html>
