--- a/Foods/public/index.html
+++ b/Foods/public/index.html
@@ -22,19 +22,19 @@
 <body>
 	<div class="container">
 		<!--SECTION 1-->
-		<section class="section section-variety-of-foods" id="section-variety-of-foods">
-			<h1 class="section__heading">Variety of Foods</h1>
-			<div class="section__icons">
-				<i class="fas fa-egg"></i>
-				<i class="fas fa-stroopwafel"></i>
-				<i class="fas fa-cheese"></i>
-				<i class="fas fa-hotdog"></i>
-				<i class="fas fa-drumstick-bite"></i>
-				<i class="fas fa-apple-alt"></i>
-				<i class="fas fa-ice-cream"></i>
-				<i class="fas fa-fish"></i>
-				<i class="fas fa-cookie"></i>
-				<i class="fas fa-seedling"></i>
+		<section class="section-variety-of-foods" id="section-variety-of-foods">
+			<h1 class="section-heading">Variety of Foods</h1>
+			<div class="slideshow">
+				<i class="slideshow__item slideshow__item--active fas fa-egg"></i>
+				<i class="slideshow__item fas fa-stroopwafel"></i>
+				<i class="slideshow__item fas fa-cheese"></i>
+				<i class="slideshow__item fas fa-hotdog"></i>
+				<i class="slideshow__item fas fa-drumstick-bite"></i>
+				<i class="slideshow__item fas fa-apple-alt"></i>
+				<i class="slideshow__item fas fa-ice-cream"></i>
+				<i class="slideshow__item fas fa-fish"></i>
+				<i class="slideshow__item fas fa-cookie"></i>
+				<i class="slideshow__item fas fa-seedling"></i>
 			</div>
 		</section>
 		<!--./SECTION 1-->
