Create and Style 3D Cards

--- a/Foods/public/index.html
+++ b/Foods/public/index.html
@@ -38,6 +38,31 @@
 			</div>
 		</section>
 		<!--./SECTION 1-->
+
+		<!--SECTION 2-->
+		<section class="section-popular-foods" id="section-popular-foods">
+			<h1 class="section-heading">Popular Meals</h1>
+			<div class="cards-container">
+				<div class="card">
+					<img class="card__img" src="images/card-img-1.png" alt="card-img-1">
+					<h3 class="card__name">Fish</h3>
+					<button class="card__button">Order Now</button>
+				</div>
+
+				<div class="card">
+					<img class="card__img" src="images/card-img-2.png" alt="card-img-2">
+					<h3 class="card__name">Cace</h3>
+					<button class="card__button">Order Now</button>
+				</div>
+
+				<div class="card">
+					<img class="card__img" src="images/card-img-3.png" alt="card-img-3">
+					<h3 class="card__name">Lobster</h3>
+					<button class="card__button">Order Now</button>
+				</div>
+			</div>
+		</section>
+		<!--./SECTION 2-->
 	</div>
 	<script src="js/main.js"></script>
 </body>
